# capstone2026-IanKirby

./: .gitignore  .gitmodules  LICENSE  README.md  evaluate_models.py  experiment_config.yaml  flops.py  pyproject.toml  requirements.txt  searcher.py  student_configs.json  utils.py
