[project]
name = "capstone2026-iankirby"
version = "0.1.0"
description = "Capstone project for MSc in AI Capstone project "
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.4.0",
    "boto3-stubs~=1.43.6",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
]
